kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-front-end
  labels:
    name: front-end
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    certmanager.k8s.io/acme-challenge-type: http01
spec:
   tls:
   - hosts:
     - shop.35.202.250.242.nip.io
     secretName: hypsershop.tls
   rules:
   - host: shop.35.202.250.242.nip.io
     http:
       paths:
       - path: /
         backend:
           serviceName: frontend
           servicePort: 80
